@@ -6,3 +6,4 @@ misc
 Contributing.md
 windows
 .*\.tar\.gz
+docker
